# xecretary-wiki

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: wiki.yaml
src/xecretary_fetcher/: __init__.py  github_wiki.py
