[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xecretary_fetcher"
dynamic = ["version"]
authors = [{name="torippy01"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-index==0.8.19",
    "openai==0.28",
    "nltk==3.8.1",
    "GitPython==3.1.34"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.hatch.version]
path = "src/xecretary_fetcher/__about__.py"

[tool.ruff]
target-version = "py39"
line-length = 88
ignore = ["E722"]
